--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hyperlounge</title>
+    <title>Synth</title>
+    <link rel="stylesheet" href="styles/mono-synth.css"/>
+    <script type="module" src="js/mono-synth.mjs"></script>
 </head>
 <body>
-<h1>Hyperlounge says Hi!</h1>
+<div id="synth"></div>
 </body>
 </html>
