Poly synth test

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Synth</title>
     <link rel="stylesheet" href="styles/mono-synth.css"/>
-    <script type="module" src="js/mono-synth.mjs"></script>
+    <script type="module" src="js/synth-options.mjs"></script>
 </head>
 <body>
 <div id="synth"></div>
