Poly synth beta

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Synth</title>
+    <link rel="manifest" href="manifest.json"/>
     <link rel="stylesheet" href="styles/mono-synth.css"/>
     <script type="module" src="js/synth-options.mjs"></script>
 </head>
