--- a/polysynth/index.html
+++ b/polysynth/index.html
@@ -5,6 +5,7 @@
     <title>Synth</title>
     <link rel="manifest" href="manifest.json"/>
     <link rel="stylesheet" href="styles/mono-synth.css"/>
+    <meta name="viewport" content="width=1180">
     <script type="module" src="js/synth-options.mjs"></script>
 </head>
 <body>
