Updated polysynth and moved to hypersynth

--- a/hypersynth/index.html
+++ b/hypersynth/index.html
@@ -27,6 +27,7 @@
             margin: 0.5em;
             padding: 1em;
             background: #ff5050;
+            color: black;
             font-family: "Roboto Mono", monospace;
             font-size: 30px;
             font-weight: bold;
