Updated polysynth and moved to hypersynth

--- a/hypersynth/index.html
+++ b/hypersynth/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Synth</title>
+    <title>HyperSynth</title>
     <link rel="manifest" href="manifest.json"/>
     <link rel="stylesheet" href="styles/mono-synth.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
