--- a/hypersynth/index.html
+++ b/hypersynth/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=1180">
-    <script type="module" src="js/synth-options.mjs"></script>
+    <script type="module" src="js/main-3774b279.mjs"></script>
     <style>
         html, body {
             padding: 0;
